--- a/21-augost-2024/grid.html
+++ b/21-augost-2024/grid.html
@@ -136,7 +136,7 @@ width: 95%;
     <section id="container">
 <div>
 <div class="card-header">
-    <img src="/assets/images/robbery.jpg" alt="robbery"/>
+    <img src="assets/images/robbery.jpg" alt="robbery"/>
 </div>
 <div class="card-info">
     <p>Naxçıvanda oğurluq edən şəxs saxlanıldı</p>
@@ -169,7 +169,7 @@ width: 95%;
 
 <div>
     <div class="card-header">
-        <img src="/assets/images/water.jpg" alt="water from tap"/>
+        <img src="assets/images/water.jpg" alt="water from tap"/>
     </div>
     <div class="card-info">
         <p>Paytact sakinlerinin SU SINAGI:Kimdir gunahkar?-Resmi aciqlama</p>
@@ -185,7 +185,7 @@ width: 95%;
 
 <div>
     <div class="card-header">
-        <img src="/assets/images/AAFA.jpg" alt="Turan Tovuz stadion"/>
+        <img src="assets/images/AAFA.jpg" alt="Turan Tovuz stadion"/>
     </div>
     <div class="card-info">
         <p>AFFA Turan Tovuzun stadionunda ot ortuyunun deyisdirlmesi ile bagli tapsiriq verib</p>
@@ -202,7 +202,7 @@ width: 95%;
 
 <div>
     <div class="card-header">
-        <img src="/assets/images/Hospital.jpeg" alt="Hospital"/>
+        <img src="assets/images/Hospital.jpeg" alt="Hospital"/>
     </div>
     <div class="card-info">
         <p>Bakida eri terefinden terk edilen qadin iki gun sonra oldu</p>
@@ -218,7 +218,7 @@ width: 95%;
 
 <div>
     <div class="card-header">
-        <img src="/assets/images/earthquick.jpeg" a;t="earthquick"/>
+        <img src="assets/images/earthquick.jpeg" alt="earthquick"/>
     </div>
 <div class="card-info">
     <p>Iranda zelzele olub</p>
