--- a/New folder/flowers.html
+++ b/New folder/flowers.html
@@ -253,7 +253,7 @@ h3{
 <div class="row">
     <div class="col-3">
         <div class="card-header">
-            <img src="/assets/images/flower-1.jpeg" alt="flower"/>
+            <img src="assets/images/flower-1.jpeg" alt="flower"/>
             <span>🤍</span>
         </div>
         <div class="card-info">
@@ -266,7 +266,7 @@ h3{
     </div>
     <div class="col-3">
         <div class="card-header">
-            <img src="/assets/images/flower-2.jpeg" alt="flower"/>
+            <img src="assets/images/flower-2.jpeg" alt="flower"/>
             <span>🤍</span>
         </div>
         <div class="card-info">
@@ -279,7 +279,7 @@ h3{
     </div>
     <div class="col-3">
         <div class="card-header">
-            <img src="/assets/images/flower-3.jpg" alt="flower"/>
+            <img src="assets/images/flower-3.jpg" alt="flower"/>
             <span>🤍</span>
         </div>
         <div class="card-info">
@@ -292,7 +292,7 @@ h3{
     </div>
     <div class="col-3">
         <div class="card-header">
-            <img src="/assets/images/flower-4.jpeg" alt="flower"/>
+            <img src="assets/images/flower-4.jpeg" alt="flower"/>
             <span>🤍</span>
         </div>
         <div class="card-info">
@@ -312,7 +312,7 @@ h3{
             <div class="row">
             <div class="col-3">
                 <div class="div1">
-       <img src="/assets/images/flower.png"/>
+       <img src="assets/images/flower.png"/>
        <p>7GÜL</p>
     </div>
     <div class="div2">
