--- a/Q.Dilruba frontend/first.html
+++ b/Q.Dilruba frontend/first.html
@@ -37,14 +37,14 @@
         <div class="maindiv2">
             <div class="box1">
                 
-              <img src="/assets/images/proimg.png" height="20%" width="20%" />
+              <img src="assets/images/proimg.png" height="20%" width="20%" />
               <h4>training courses</h4>
               <p>______</p>
               <h6>The gradual accumulation of information about atomic and small-scale behaviour</h6>
             </div>
             <div class="box2">
               
-                <img src="/assets/images/pro2png.png" height="20%" width="20%"/>
+                <img src="assets/images/pro2png.png" height="20%" width="20%"/>
                 <h4>2,769 online courses</h4>
                 <p>______</p>
             <h6>The gradual accumulation of information about atomic and small-scale behaviour</h6>
