--- a/Travelo-scss-turing/index.html
+++ b/Travelo-scss-turing/index.html
@@ -77,7 +77,7 @@
             <div class="choice">
                 <form>
                     <label for="place">Where you want to go?</label>
-                    <input type="text" placeholder="where to go?" required/>
+                    <input type="text" placeholder="where to go?" id="place" required/>
                     <input type="date" placeholder="Date" required/>
                     <select>
                         <option>Travel type</option>
